<resources>
    <string name="app_name">HopReviews</string>

    <string name="maps_api_key">AIzaSyDAIIV6d2EkMt478lJMnhUuU8-dS1sAZj0</string>

    <string name="title_map">Map</string>
    <string name="title_feed">Feed</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_activity_login">Log In</string>
    <string name="prompt_email">JHU Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome, "</string>
    <string name="invalid_username">Email must end with @jhu.edu</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="or">OR</string>
    <string name="sign_in_with_jhed">Sign in with JHED</string>
    <string name="first_time_user">First-time User? Sign up.</string>
    <string name="remember_me">Remember Me?</string>
    <string name="sign_up">Sign up</string>
    <string name="have_an_account_sign_in">Have an Account? Sign in.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="select_year">Select Year</string>
    <string name="dining_halls">Dining Halls</string>
    <string name="recreation">Recreation</string>
    <string name="restaurants">Restaurants</string>
    <string name="study">Study</string>
    <string name="bars">Bars</string>
    <string name="profile">Profile</string>
    <string name="filters">Filters</string>
    <string name="sign_out">Sign out</string>
    <string-array name="spinner_entries">
        <item>Freshman</item>
        <item>Sophomore</item>
        <item>Junior</item>
        <item>Senior</item>
        <item>Graduate Student</item>
    </string-array>
    <string name="title_activity_location">LocationActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="submit">submit</string>
    <string name="post_review">Post Review</string>
    <string name="write_your_review_here">Write Your Review Here</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="my_reviews">My Reviews</string>
    <string name="favorited">favorited</string>
    <string name="photos">Photos</string>
</resources>