<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.SignUpActivity">

    <EditText
        android:id="@+id/username3"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:hint="@string/first_name"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/create_account"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:enabled="false"
        android:text="@string/action_sign_in"
        android:textColor="@color/white"
        app:backgroundTint="@color/blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username7"
        app:layout_constraintVertical_bias="0.115" />

    <Button
        android:id="@+id/alreadyuser"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:text="@string/have_an_account_sign_in"
        android:textColor="@color/blue"
        app:backgroundTint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account"
        app:layout_constraintVertical_bias="0.386"
        app:strokeColor="@color/black" />

    <View
        android:id="@+id/divider4"
        android:layout_width="380dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintBottom_toTopOf="@+id/alreadyuser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account"
        app:layout_constraintVertical_bias="0.547" />

    <EditText
        android:id="@+id/username6"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="88dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username4" />

    <EditText
        android:id="@+id/username7"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="14dp"
        android:hint="@string/prompt_password"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username6" />

    <EditText
        android:id="@+id/username4"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="14dp"
        android:hint="@string/last_name"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username3" />

    <androidx.cardview.widget.CardView
        android:layout_width="360dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/username6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username4">

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:entries="@array/spinner_entries"
            android:prompt="@string/select_year" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>